--- a/dl_2019_ulmfit_sentiment_analysis.ipynb
+++ b/dl_2019_ulmfit_sentiment_analysis.ipynb
@@ -26,22 +26,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "kHuejXYp8U7o",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Import Dependencies and Create DataBunch"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "1itcR3ZD7__a",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "#Training an IMDb Sentiment Model with ULMFiT ((Universal Language Model Fine-tuning) for Text Classification)."
       ],
@@ -49,12 +49,12 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "jiknK4z48TnT",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "from fastai.text import *"
       ],
@@ -62,6 +62,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "vB5tN5BG8vJb",
         "colab_type": "code",
@@ -71,12 +72,11 @@
           "height": 34
         }
       },
-      "cell_type": "code",
       "source": [
         "path = untar_data(URLs.IMDB_SAMPLE)\n",
         "path"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,20 +93,20 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "WCIShdNS6yTB",
         "colab_type": "code",
+        "outputId": "02443b3b-80db-4aae-800f-528a0a623360",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "02443b3b-80db-4aae-800f-528a0a623360"
+        }
       },
-      "cell_type": "code",
       "source": [
         "!ls {path}"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,6 +118,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "yKDDf2Od8vCz",
         "colab_type": "code",
@@ -127,12 +128,11 @@
           "height": 204
         }
       },
-      "cell_type": "code",
       "source": [
         "df = pd.read_csv(path/'texts.csv')\n",
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,12 +213,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "IKuRXd5e8u_F",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "data_lm = TextLMDataBunch.from_csv(path, 'texts.csv')\n",
         "data_clas = TextClasDataBunch.from_csv(path, 'texts.csv', vocab = data_lm.train_ds.vocab, bs = 32)"
@@ -227,20 +227,20 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "aCtUGlsN8Mip",
         "colab_type": "code",
+        "outputId": "7a07983c-bd06-49f1-ea5c-041f08fecb5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "7a07983c-bd06-49f1-ea5c-041f08fecb5e"
+        }
       },
-      "cell_type": "code",
       "source": [
         "data_lm.show_batch()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -288,12 +288,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "1P2uTIYmL6_o",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "data_lm.save('data_lm_export.pkl')\n",
         "data_clas.save('data_clas_export.pkl')"
@@ -302,12 +302,12 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "tUq0Idc5L7d0",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "data_lm = load_data(path, 'data_lm_export.pkl')\n",
         "data_clas = load_data(path, 'data_clas_export.pkl', bs = 16)"
@@ -316,22 +316,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "o_Upn_o_8VhG",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Language Model Training, Testing and Interpretation"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "UwfU8W_CQIwB",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "#Language Modeling is the task of Predicting the next word or character in a document."
       ],
@@ -339,6 +339,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "dqqJlLFsZ1Ub",
         "colab_type": "code",
@@ -348,11 +349,10 @@
           "height": 289
         }
       },
-      "cell_type": "code",
       "source": [
         "data_lm.show_batch()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -400,33 +400,41 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "qoxtoBtj8Tkb",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
-        "learn = language_model_learner(data_lm, AWD_LSTM, drop_mult = 0.5)"
+        "learn = language_model_learner(data_lm, AWD_LSTM, drop_mult = 0.5)\n",
+        "#AWD_LSTM stands for Averaged stocastic gradient descent with Weight Dropped LSTM.\n",
+        "  #Drop Connect\n",
+        "    #In Feed Forward and CNN's it is easier to use Dropout but in the case of RNN's we can't do that to hidden states becauses that hinders the ability of LSTM's long Term Dependencies.\n",
+        "    #So we use Dropout on the weights connecting the hidden states rather than on the hidden states and cell states.\n",
+        "  #ASGD\n",
+        "    #It has been found that for the particular task of language modeling, traditional SGD without momentum outperforms other algorithms such as momentum SGD, Adam, Adagrad, and RMSProp.\n",
+        "    #Therefore, the authors investigate a variant of the traditional SGD algorithm known as ASGD (Average SGD).\n",
+        "    #It takes gradient update step identical to the SGD algorithm but instead of returning the weight computed in the current iteration, it also takes into account the weights of the previous iterations and returns an average."
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "o9nX6KytZJJL",
         "colab_type": "code",
+        "outputId": "f30ff7a8-5314-4667-ec38-f6ff06e284bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 103
-        },
-        "outputId": "f30ff7a8-5314-4667-ec38-f6ff06e284bc"
+        }
       },
-      "cell_type": "code",
       "source": [
         "learn.fit_one_cycle(1, 1e-2)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -464,12 +472,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "2kMGqXx28The",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "learn.unfreeze()"
       ],
@@ -477,6 +485,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "CFOdQzN78uRH",
         "colab_type": "code",
@@ -486,11 +495,10 @@
           "height": 103
         }
       },
-      "cell_type": "code",
       "source": [
         "learn.fit_one_cycle(1, 1e-3)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,12 +536,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "ZwPVzsJSMfOY",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "#That Accuracy is a good one as it is a language model.\n",
         "#Our Pretrained Model is trained on WikiText-103 Dataset.\n",
@@ -544,16 +552,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "8SMUKYli8WOD",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Prediction - Inference"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "lb7ALyjB8Tf5",
         "colab_type": "code",
@@ -563,11 +572,10 @@
           "height": 34
         }
       },
-      "cell_type": "code",
       "source": [
         "learn.predict('Life is', n_words = 8)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,12 +592,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "8PfXozaS8th3",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "learn.save_encoder('ft_enc')"
       ],
@@ -597,22 +605,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9i_lKlOfUysg",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Classifier Training, Testing and Interpretation."
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "VYuDO6tsPPPN",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "#Sentiment Analysis is the task of Classifying the Polarity of a given Text."
       ],
@@ -620,6 +628,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "G2Sa9U96Zxsx",
         "colab_type": "code",
@@ -629,11 +638,10 @@
           "height": 289
         }
       },
-      "cell_type": "code",
       "source": [
         "data_clas.show_batch()"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -681,12 +689,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "M8vS0uq5VB7_",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "learn = text_classifier_learner(data_clas, AWD_LSTM, drop_mult = 0.5)"
       ],
@@ -694,12 +702,12 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "pNFy0mc8h36U",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "learn.load_encoder('ft_enc')"
       ],
@@ -707,6 +715,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "OUQ0ufD_VCev",
         "colab_type": "code",
@@ -716,11 +725,10 @@
           "height": 103
         }
       },
-      "cell_type": "code",
       "source": [
         "learn.fit_one_cycle(1, 1e-2)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -758,12 +766,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "DyeE_ZRNVCch",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "learn.freeze_to(-2)"
       ],
@@ -771,6 +779,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "2F9boELjWYab",
         "colab_type": "code",
@@ -780,11 +789,10 @@
           "height": 103
         }
       },
-      "cell_type": "code",
       "source": [
         "learn.fit_one_cycle(1, slice(5e-3/2., 5e-3))"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -822,12 +830,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "KMDEoCzeWkDd",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "learn.unfreeze()"
       ],
@@ -835,6 +843,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "3jYio62nWnLi",
         "colab_type": "code",
@@ -844,11 +853,10 @@
           "height": 103
         }
       },
-      "cell_type": "code",
       "source": [
         "learn.fit_one_cycle(1, slice(2e-3/100., 2e-3))"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -886,6 +894,7 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "jzDIYFC3W0be",
         "colab_type": "code",
@@ -895,11 +904,10 @@
           "height": 34
         }
       },
-      "cell_type": "code",
       "source": [
         "learn.predict(\"This is good\")"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -916,12 +924,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "OhJKKEb7aGjv",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "learn.save('stage-1')"
       ],
@@ -929,12 +937,12 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "3IXvE7Z5aQ0h",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "#We achieved an Accuracy of 82%."
       ],
